Fixed header overlap issue

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -27,17 +27,18 @@ button:focus {
 	outline: none;
 }
 
+.content {
+	position: absolute;
+	margin-top: 50px;
+	width: 100%;
+}
+
 .index-head {
-		position: absolute;
+		position: fixed;
 		width: 100%;
+		height: 50px;
 		background-color: rgb(230, 230, 230);
 		border-bottom: 2px solid rgb(210, 210, 210);
-	}
-	.index-head-wrapper {
-		width: 100%;
-		height: 100px;
-		position: fixed;
-		top: 0px;
 	}
 	.index-head-title {
 		color: rgb(255, 180, 50);
